Implementações no projeto

--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
         </div>
 
         <p class="result"></p>
+        <img class="result-img" src="assets/img/gif-human.gif" alt="imagem do resultado">
 
-        <p class="my-points">Sua Pontuação: <span id="human-score">0</span></p>
-        <p class="points-machines">Sua da Máquina: <span id="machine-score">0</span></p>
+        <div class="result-playr">
+            <!-- <p class="my-points">Sua Pontuação: <span id="human-score">0</span></p>
+            <p class="points-machines">Sua da Máquina: <span id="machine-score">0</span></p> -->
+            <img src="assets/img/human-h.png" alt="Imagem Humano">
+            <span class="value" id="human-score">0</span>
+            <span class="x-um">X</span>
+            <span class="value" id="machine-score">0</span>
+            <img src="assets/img/robot-r.png" alt="Imagem maquina">
+        </div>
     </div>
 </body>
 <script src="script.js"></script>
