Atualização no projeto, com novas interação

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <p class="result"></p>
-        <img class="result-img" src="assets/img/gif-human.gif" alt="imagem do resultado">
+        <img class="result-img" id="img-result" src="assets/img/gif-human.gif" alt="imagem do resultado">
 
         <div class="result-playr">
             <!-- <p class="my-points">Sua Pontuação: <span id="human-score">0</span></p>
